<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Laboratorio05</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string-array name="array_ufs">
        <item >Acre</item>
        <item >Amazonas</item>
        <item >Alagoas</item>
        <item >Amapá</item>
        <item >Bahia</item>
        <item >Ceará</item>
        <item >Distrito Federal</item>
        <item >Espírito Santo</item>
        <item >Goiás</item>
        <item >Maranhão</item>
        <item >Mato Grosso</item>
        <item >Mato Grosso do Sul</item>
        <item >Minas Gerais</item>
        <item >Pará</item>
        <item >Paraíba</item>
        <item >Paraná</item>
        <item >Pernambuco</item>
        <item >Piauí</item>
        <item >Rio De Janeiro</item>
        <item >Rio Grande Do Norte</item>
        <item >Rio Grande Do Sul</item>
        <item >Rondônia</item>
        <item >Roraima</item>
        <item >Santa Catarina</item>
        <item >São Paulo</item>
        <item >Sergipe</item>
        <item >Tocantins</item>
    </string-array>
	<string name="nome">Nome Completo</string>
    <string name="email">Email</string>
	<string name="idade">Idade</string>
	<string name="masculino">Masculino</string>
	<string name="feminino">Feminino</string>
	<string name="sim">Sim</string>
	<string name="nao">Não</string>
	<string name="atualiza_auto">Atualizações Automáticas?</string>
	<string name="aceito">Aceito os termos da aplicação</string>
</resources>
